--- a/configs/kitty.conf
+++ b/configs/kitty.conf
@@ -3,3 +3,8 @@ include tokyo-night.conf
 font_family JetBrains Mono
 font_size 12.0
 
+hide_window_decorations yes
+
+shell_integration no-cursor
+shell zsh
+
