keyboard shortcuts mapping

--- a/sway/sway/config
+++ b/sway/sway/config
@@ -36,10 +36,13 @@ bindsym $mod+Shift+c reload
 bindsym $mod+Shift+e exec swaynag -t warning -m "Exit Wayland session?" -B "Yes" "swaymsg exit"
 
 # Keyboard shortcuts
-bindsym --locked XF86AudioMute exec pactl set-sink-mute @DEFAULT_SINK@ toggle
-bindsym --locked XF86AudioLowerVolume exec pactl set-sink-volume @DEFAULT_SINK@ -10%
-bindsym --locked XF86AudioRaiseVolume exec pactl set-sink-volume @DEFAULT_SINK@ +10%
-bindsym --locked XF86AudioMicMute exec pactl set-source-mute @DEFAULT_SOURCE@ toggle
+bindsym --locked XF86AudioRaiseVolume exec pamixer -ui 5
+bindsym --locked XF86AudioLowerVolume exec pamixer -ud 5
+bindsym --locked XF86AudioMute exec pamixer -t
+
+bindsym --locked XF86AudioPlay exec playerctl play-pause
+bindsym --locked XF86AudioNext exec playerctl next
+bindsym --locked XF86AudioPrev exec playerctl previous
 
 # Moving
 bindsym $mod+$left focus left
