--- a/sway/sway/config
+++ b/sway/sway/config
@@ -122,13 +122,7 @@ bindsym $mod+r mode "resize"
 
 # Status Bar
 bar {
-    position top
-    status_command while date +'%Y-%m-%d %I:%M:%S %p'; do sleep 1; done
-    colors {
-        statusline #ffffff
-        background #323232
-        inactive_workspace #32323200 #32323200 #5c5c5c
-    }
+  swaybar_command waybar
 }
 
 include @sysconfdir@/sway/config.d/*
