--- a/configs/kitty.conf
+++ b/configs/kitty.conf
@@ -1,9 +1,11 @@
-include tokyo-night.conf
-
-font_family JetBrains Mono
+font_family JetBrains Mono Nerd
 font_size 12.0
 
 hide_window_decorations yes
 
 shell_integration no-cursor
 
+# BEGIN_KITTY_THEME
+# Akira
+include current-theme.conf
+# END_KITTY_THEME
