--- a/configs/akira/akira.conf
+++ b/configs/akira/akira.conf
@@ -4,74 +4,39 @@
 ## upstream: A URL pointing to the location of this file upstream for auto-updates
 ## blurb: Akira distro color scheme based on Tokyo night color theme
 
-# Azul Profundo - Fundo - #1A1B26
-# Roxo Vibrante - Destaques e menus ativos - #9D7CD8
-# Ciano Elétrico - Links, realce de cursor e elementos dinâmicos - #7DCFFF
-# Vermelho Neon - Erros, avisos, energia - #F7768E
-# Verde Suave - Status positivo, confirmações - #9ECE6A
-# Cinza Claro #C0CAF5
+# Main colors
+background            #1A1B26
+foreground            #C0CAF5
+selection_background  #7DCFFF
+selection_foreground  #1A1B26
+cursor                #C0CAF5
+cursor_text_color     #1A1B26
 
-#: The basic colors
-foreground #A9B1D6
-background #1A1B26
-selection_foreground none
-selection_background #28344A
-
-#: Cursor colors
-cursor #C0CAF5
-cursor_text_color #1A1B26
-
-#: URL underline color when hovering with mouse
-url_color #7DCFFF
-
-#: kitty window border colors and terminal bell colors
-active_border_color #3D59A1
-inactive_border_color #101014
-bell_border_color #E0AF68
-
-#: Tab bar colors
-tab_bar_style fade
-tab_fade 1
-tab_bar_background #101014
-
-active_tab_foreground #3D59A1
-active_tab_background #16161E
-active_tab_font_style bold
-
-inactive_tab_foreground #787C99
-inactive_tab_background #16161E
-inactive_tab_font_style bold
-
-#: The basic 16 Colors
-#: black
-color0 #414868
-color8 #414868
-
-#: red
-color1 #F7768E
-color9 #F7768E
-
-#: green
+# Normal colors
+color0  #1A1B26
+color1  #F7768E
 color2  #9ECE6A
-color10 #9ECE6A
-
-#: yellow
 color3  #E0AF68
-color11 #E0AF68
-
-#: blue
 color4  #7AA2F7
-color12 #7AA2F7
-
-#: magenta
-color5  #BB9AF7
-color13 #BB9AF7
-
-#: cyan
+color5  #9D7CD8
 color6  #7DCFFF
-color14 #7DCFFF
-
-#: white
 color7  #C0CAF5
-color15 #C0CAF5
+
+# Bright colors
+color8  #414868
+color9  #F7768E
+color10 #9ECE6A
+color11 #E0AF68
+color12 #7AA2F7
+color13 #BB9AF7
+color14 #7DCFFF
+color15 #FFFFFF
+
+# Extra settings
+url_color               #7DCFFF
+active_tab_foreground   #1A1B26
+active_tab_background   #F7768E
+inactive_tab_foreground #C0CAF5
+inactive_tab_background #1A1B26
+tab_bar_background      #1A1B26
 
