--- a/configs/hyperland/hyprland.conf
+++ b/configs/hyperland/hyprland.conf
@@ -1,95 +1,33 @@
-# This is an example Hyprland config file.
-# Refer to the wiki for more information.
-# https://wiki.hypr.land/Configuring/
-
-# Please note not all available settings / options are set here.
-# For a full list, see the wiki
-
-# You can split this configuration into multiple files
-# Create your files separately and then link them to this file like this:
-# source = ~/.config/hypr/myColors.conf
-
-
-################
-### MONITORS ###
-################
-
-# See https://wiki.hypr.land/Configuring/Monitors/
+# Monitors
 monitor=,preferred,auto,auto
 
-
-###################
-### MY PROGRAMS ###
-###################
-
-# See https://wiki.hypr.land/Configuring/Keywords/
-
-# Set programs that you use
+# Applications
 $terminal = kitty
-$fileManager = dolphin
-$menu = wofi --show drun
+$fileManager = nautilus
+$menu = wofi
 
-
-#################
-### AUTOSTART ###
-#################
-
-# Autostart necessary processes (like notifications daemons, status bars, etc.)
-# Or execute your favorite apps at launch like this:
-
+# Autostart
 # exec-once = $terminal
 # exec-once = nm-applet &
 # exec-once = waybar & hyprpaper & firefox
 
-
-#############################
-### ENVIRONMENT VARIABLES ###
-#############################
-
-# See https://wiki.hypr.land/Configuring/Environment-variables/
-
+# Environment variables
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
+env = GTK_THEME,Tokyonight-Dark
 
-
-###################
-### PERMISSIONS ###
-###################
-
-# See https://wiki.hypr.land/Configuring/Permissions/
-# Please note permission changes here require a Hyprland restart and are not applied on-the-fly
-# for security reasons
-
-# ecosystem {
-#   enforce_permissions = 1
-# }
-
-# permission = /usr/(bin|local/bin)/grim, screencopy, allow
-# permission = /usr/(lib|libexec|lib64)/xdg-desktop-portal-hyprland, screencopy, allow
-# permission = /usr/(bin|local/bin)/hyprpm, plugin, allow
-
-
-#####################
-### LOOK AND FEEL ###
-#####################
-
-# Refer to https://wiki.hypr.land/Configuring/Variables/
-
-# https://wiki.hypr.land/Configuring/Variables/#general
+# Theme
 general {
     gaps_in = 5
     gaps_out = 5
 
     border_size = 1
 
-    # https://wiki.hypr.land/Configuring/Variables/#variable-types for info about colors
-    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
-    col.inactive_border = rgba(595959aa)
+    col.active_border = rgb(F7768E)
+    col.inactive_border = rgb(C0CAF5)
 
-    # Set to true enable resizing windows by clicking and dragging on borders and gaps
     resize_on_border = false
 
-    # Please see https://wiki.hypr.land/Configuring/Tearing/ before you turn this on
     allow_tearing = false
 
     layout = dwindle
@@ -102,19 +40,12 @@ decoration {
     inactive_opacity = 1.0
 
     shadow {
-        enabled = true
-        range = 4
-        render_power = 3
-        color = rgba(1a1a1aee)
+        enabled = false
     }
 
     # https://wiki.hypr.land/Configuring/Variables/#blur
     blur {
-        enabled = true
-        size = 3
-        passes = 1
-
-        vibrancy = 0.1696
+        enabled = false
     }
 }
 
@@ -178,12 +109,8 @@ misc {
     disable_hyprland_logo = false # If true disables the random hyprland logo / anime girl background. :(
 }
 
-
-#############
-### INPUT ###
-#############
-
 # https://wiki.hypr.land/Configuring/Variables/#input
+# Input
 input {
     kb_layout = us
     kb_variant =
@@ -205,20 +132,15 @@ gesture = 3, horizontal, workspace
 
 # Example per-device config
 # See https://wiki.hypr.land/Configuring/Keywords/#per-device-input-configs for more
-device {
-    name = epic-mouse-v1
-    sensitivity = -0.5
-}
+#device {
+#    name = epic-mouse-v1
+#    sensitivity = -0.5
+#}
 
 
-###################
-### KEYBINDINGS ###
-###################
+# Keybinds
+$mainMod = SUPER
 
-# See https://wiki.hypr.land/Configuring/Keywords/
-$mainMod = SUPER # Sets "Windows" key as main modifier
-
-# Example binds, see https://wiki.hypr.land/Configuring/Binds/ for more
 bind = $mainMod, T, exec, $terminal
 bind = $mainMod, Q, killactive,
 bind = $mainMod, M, exit,
@@ -284,10 +206,7 @@ bindl = , XF86AudioPause, exec, playerctl play-pause
 bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
 
-##############################
-### WINDOWS AND WORKSPACES ###
-##############################
-
+# Windows and Workspaces
 # See https://wiki.hypr.land/Configuring/Window-Rules/ for more
 # See https://wiki.hypr.land/Configuring/Workspace-Rules/ for workspace rules
 
@@ -299,3 +218,4 @@ windowrule = suppressevent maximize, class:.*
 
 # Fix some dragging issues with XWayland
 windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+
