Hyprland: added chromium as browser

--- a/configs/hyperland/hyprland.conf
+++ b/configs/hyperland/hyprland.conf
@@ -4,6 +4,7 @@ monitor=,preferred,auto,auto
 # Applications
 $terminal = kitty
 $fileManager = nautilus
+$browser = chromium
 $menu = wofi
 
 # Autostart
@@ -145,6 +146,7 @@ bind = $mainMod, T, exec, $terminal
 bind = $mainMod, Q, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, F, exec, $fileManager
+bind = $mainMod, B, exec, $browser
 bind = $mainMod, C, togglefloating,
 bind = $mainMod, SPACE, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
