--- a/configs/hyperland/hyprland.conf
+++ b/configs/hyperland/hyprland.conf
@@ -8,9 +8,7 @@ $browser = chromium
 $menu = wofi
 
 # Autostart
-# exec-once = $terminal
-# exec-once = nm-applet &
-# exec-once = waybar & hyprpaper & firefox
+exec-once = hyprpaper
 
 # Environment variables
 env = XCURSOR_SIZE,24
