Hyprland: lockscreen with hyprlock

--- a/configs/hyperland/hyprlock.conf
+++ b/configs/hyperland/hyprlock.conf
@@ -5,43 +5,42 @@ background {
     brightness = 0.8
 }
 
-clock {
-    font_family = "JetBrainsMono Nerd Font"
-    font_size = 60
-    color = rgba(255, 255, 255, 0.9)
-    position = 0, -120
-    format = %H:%M
+input-field {
+    size = 250, 60
+    position = 0, -200
+    outline_thickness = 1
+    rounding = 0
+    valign = center
+    halign = center
+
+    dots_size = 0.2
+    dots_spacing = 0.35
+
+    inner_color = rgba(20, 20, 30, 0.6)
+    outer_color = rgba(255, 0, 80, 0.9)
+    capslock_color = rgba(255, 200, 0, 1)
+    font_color = rgba(200, 200, 200, 1)
 }
 
+# Date
 label {
-    font_family = "JetBrainsMono Nerd Font"
+    font_family = JetBrains Mono
     font_size = 28
     color = rgba(200, 200, 200, 0.8)
-    position = 0, -60
-    text = %A, %d %B %Y
+    position = 0, 100
+    text = cmd[update:1000] echo "$(date +"%A, %d %B %Y")"
+    valign = center
+    halign = center
 }
 
-input-field {
-    size = 400, 60
-    position = 0, 120
-    outline_thickness = 3
-    rounding = 12
-
-    font_family = "JetBrainsMono Nerd Font"
-    font_size = 22
-    inner_color = rgba(20, 20, 30, 0.6)
-    outer_color = rgba(255, 0, 80, 0.9)   # Vermelho neon inspirado no logo
-    text_color  = rgba(255, 255, 255, 1)
-
-    fail_color = rgba(255, 50, 50, 1)     # Cor ao errar a senha
-    capslock_color = rgba(255, 200, 0, 1) # Aviso Caps Lock
-}
-
+# Clock
 label {
-    font_family = "JetBrainsMono Nerd Font"
-    font_size = 18
-    color = rgba(255, 255, 255, 0.7)
-    position = 0, 200
-    text = "Pressione Enter para desbloquear"
+    font_family = JetBrains Mono
+    font_size = 60
+    color = rgba(255, 255, 255, 0.9)
+    position = 0, 0
+    text = cmd[update:1000] echo "$(date +"%-I:%M")"
+    valign = center
+    halign = center
 }
 
