--- a/configs/hyperland/hyprland.conf
+++ b/configs/hyperland/hyprland.conf
@@ -6,6 +6,7 @@ $terminal = kitty
 $fileManager = nautilus
 $browser = chromium
 $menu = wofi
+$lockscreen = hyprlock
 
 # Autostart
 exec-once = hyprpaper
@@ -147,6 +148,7 @@ bind = $mainMod, F, exec, $fileManager
 bind = $mainMod, B, exec, $browser
 bind = $mainMod, C, togglefloating,
 bind = $mainMod, SPACE, exec, $menu
+bind = $mainMod, ESCAPE, exec, $lockscreen
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, G, togglesplit, # dwindle
 
