Config: fixed JetBrains font family string

--- a/configs/hyperland/hyprlock.conf
+++ b/configs/hyperland/hyprlock.conf
@@ -16,6 +16,7 @@ input-field {
     dots_size = 0.2
     dots_spacing = 0.35
 
+    font_family = JetBrainsMono Nerd Font Mono
     inner_color = rgba(20, 20, 30, 0.6)
     outer_color = rgba(255, 0, 80, 0.9)
     capslock_color = rgba(255, 200, 0, 1)
@@ -24,7 +25,7 @@ input-field {
 
 # Date
 label {
-    font_family = JetBrains Mono
+    font_family = JetBrainsMono Nerd Font Mono
     font_size = 28
     color = rgba(200, 200, 200, 0.8)
     position = 0, 100
@@ -35,7 +36,7 @@ label {
 
 # Clock
 label {
-    font_family = JetBrains Mono
+    font_family = JetBrainsMono Nerd Font Mono
     font_size = 60
     color = rgba(255, 255, 255, 0.9)
     position = 0, 0
