--- a/configs/hypr/hyprland.conf
+++ b/configs/hypr/hyprland.conf
@@ -196,18 +196,20 @@ bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
 # Laptop multimedia keys for volume and LCD brightness
-bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+
-bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
-bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
-bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
+bindel = ,XF86AudioRaiseVolume, exec, akira-audio-volume-raise
+bindel = ,XF86AudioLowerVolume, exec, akira-audio-volume-lower
+bindel = ,XF86AudioMute, exec, akira-audio-volume-toggle-mute
+bindel = ,XF86AudioMicMute, exec, akira-audio-mic-toggle-mute
 bindel = ,XF86MonBrightnessUp, exec, brightnessctl -e4 -n2 set 5%+
 bindel = ,XF86MonBrightnessDown, exec, brightnessctl -e4 -n2 set 5%-
 
 # Requires playerctl
-bindl = , XF86AudioNext, exec, playerctl next
+bindl = , XF86AudioNext, exec, akira-audio-next
+bindl = , XF86AudioPrev, exec, akira-audio-prev
+#bindl = , XF86AudioPause, exec, akira-audio-toggle-play
+#bindl = , XF86AudioPlay, exec, akira-audio-toggle-play
 bindl = , XF86AudioPause, exec, playerctl play-pause
 bindl = , XF86AudioPlay, exec, playerctl play-pause
-bindl = , XF86AudioPrev, exec, playerctl previous
 
 # Windows and Workspaces
 # See https://wiki.hypr.land/Configuring/Window-Rules/ for more
