--- a/configs/waybar/config
+++ b/configs/waybar/config
@@ -73,7 +73,7 @@
     "format-disabled": "󰂲",
     "format-connected": "",
     "tooltip-format": "Devices connected: {num_connections}",
-    "on-click": "blueberry"
+    "on-click": "bluetui"
   },
   "pulseaudio": {
     "format": "{icon}",
