Hyprland: kanshi for monitors and profiles

--- a/configs/hypr/hyprland.conf
+++ b/configs/hypr/hyprland.conf
@@ -1,4 +1,4 @@
-# Monitors
+# Monitors (managed by kanshi)
 monitor=,preferred,auto,auto
 
 # Applications
@@ -11,6 +11,7 @@ $lockscreen = hyprlock
 # Autostart
 exec-once = hyprpaper
 exec-once = waybar
+exec-once = kanshi
 
 # Environment variables
 env = XCURSOR_SIZE,24
