--- a/configs/hypr/hyprland.conf
+++ b/configs/hypr/hyprland.conf
@@ -108,7 +108,7 @@ master {
 # https://wiki.hypr.land/Configuring/Variables/#misc
 misc {
     force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
-    disable_hyprland_logo = false # If true disables the random hyprland logo / anime girl background. :(
+    disable_hyprland_logo = true # If true disables the random hyprland logo / anime girl background. :(
 }
 
 # https://wiki.hypr.land/Configuring/Variables/#input
@@ -205,12 +205,17 @@ bindel = ,XF86MonBrightnessUp, exec, akira-brightness-up
 bindel = ,XF86MonBrightnessDown, exec, akira-brightness-down
 
 # Requires playerctl
-bindl = , XF86AudioNext, exec, akira-audio-next
-bindl = , XF86AudioPrev, exec, akira-audio-prev
-#bindl = , XF86AudioPause, exec, akira-audio-toggle-play
-#bindl = , XF86AudioPlay, exec, akira-audio-toggle-play
-bindl = , XF86AudioPause, exec, playerctl play-pause
-bindl = , XF86AudioPlay, exec, playerctl play-pause
+bindl = ,XF86AudioNext, exec, akira-audio-next
+bindl = ,XF86AudioPrev, exec, akira-audio-prev
+# bindl = ,XF86AudioPause, exec, akira-audio-toggle-play
+# bindl = ,XF86AudioPlay, exec, akira-audio-toggle-play
+bindl = ,XF86AudioPause, exec, playerctl play-pause
+bindl = ,XF86AudioPlay, exec, playerctl play-pause
+
+# Screenshot
+bind = ,Print, exec, akira-screenshot area
+bind = SHIFT, Print, exec, akira-screenshot window
+bind = Control, Print, exec, akira-screenshot monitor
 
 # Windows and Workspaces
 # See https://wiki.hypr.land/Configuring/Window-Rules/ for more
