Hyprland: emoji picker

--- a/configs/hypr/hyprland.conf
+++ b/configs/hypr/hyprland.conf
@@ -217,6 +217,9 @@ bind = ,Print, exec, akira-screenshot area
 bind = SHIFT, Print, exec, akira-screenshot window
 bind = Control, Print, exec, akira-screenshot monitor
 
+# Emoji picker
+bind = $mainMod ALT, SPACE, exec, wofi-emoji
+
 # Windows and Workspaces
 # See https://wiki.hypr.land/Configuring/Window-Rules/ for more
 # See https://wiki.hypr.land/Configuring/Workspace-Rules/ for workspace rules
