Bin: moved brightness scritps into one script

--- a/configs/hypr/hyprland.conf
+++ b/configs/hypr/hyprland.conf
@@ -201,8 +201,8 @@ bindel = ,XF86AudioRaiseVolume, exec, akira-audio-volume-raise
 bindel = ,XF86AudioLowerVolume, exec, akira-audio-volume-lower
 bindel = ,XF86AudioMute, exec, akira-audio-volume-toggle-mute
 bindel = ,XF86AudioMicMute, exec, akira-audio-mic-toggle-mute
-bindel = ,XF86MonBrightnessUp, exec, akira-brightness-up
-bindel = ,XF86MonBrightnessDown, exec, akira-brightness-down
+bindel = ,XF86MonBrightnessUp, exec, akira-brightness up
+bindel = ,XF86MonBrightnessDown, exec, akira-brightness down
 
 # Requires playerctl
 bindl = ,XF86AudioNext, exec, akira-audio-next
