--- a/configs/hypr/hyprland.conf
+++ b/configs/hypr/hyprland.conf
@@ -196,21 +196,21 @@ bind = $mainMod, mouse_up, workspace, e-1
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
-# Laptop multimedia keys for volume and LCD brightness
-bindel = ,XF86AudioRaiseVolume, exec, akira-audio-volume-raise
-bindel = ,XF86AudioLowerVolume, exec, akira-audio-volume-lower
-bindel = ,XF86AudioMute, exec, akira-audio-volume-toggle-mute
-bindel = ,XF86AudioMicMute, exec, akira-audio-mic-toggle-mute
-bindel = ,XF86MonBrightnessUp, exec, akira-brightness up
-bindel = ,XF86MonBrightnessDown, exec, akira-brightness down
-
-# Requires playerctl
-bindl = ,XF86AudioNext, exec, akira-audio-next
-bindl = ,XF86AudioPrev, exec, akira-audio-prev
-# bindl = ,XF86AudioPause, exec, akira-audio-toggle-play
-# bindl = ,XF86AudioPlay, exec, akira-audio-toggle-play
+# Audio
+bindel = ,XF86AudioRaiseVolume, exec, akira-audio volume-up
+bindel = ,XF86AudioLowerVolume, exec, akira-audio volume-down
+bindel = ,XF86AudioMute, exec, akira-audio volume-toggle
+bindel = ,XF86AudioMicMute, exec, akira-audio mic-toggle
+bindl = ,XF86AudioNext, exec, akira-audio play-next
+bindl = ,XF86AudioPrev, exec, akira-audio play-prev
 bindl = ,XF86AudioPause, exec, playerctl play-pause
 bindl = ,XF86AudioPlay, exec, playerctl play-pause
+# bindl = ,XF86AudioPause, exec, akira-audio play-pause
+# bindl = ,XF86AudioPlay, exec, akira-audio play-pause
+
+# Brightness
+bindel = ,XF86MonBrightnessUp, exec, akira-brightness up
+bindel = ,XF86MonBrightnessDown, exec, akira-brightness down
 
 # Screenshot
 bind = ,Print, exec, akira-screenshot area
