--- a/configs/hypr/hyprland.conf
+++ b/configs/hypr/hyprland.conf
@@ -145,7 +145,7 @@ $mainMod = SUPER
 
 bind = $mainMod, T, exec, $terminal
 bind = $mainMod, Q, killactive,
-bind = $mainMod, M, exit,
+bind = $mainMod SHIFT, P, exec, syspower
 bind = $mainMod, F, exec, $fileManager
 bind = $mainMod, B, exec, $browser
 bind = $mainMod, C, togglefloating,
