--- a/configs/hypr/hyprland.conf
+++ b/configs/hypr/hyprland.conf
@@ -220,6 +220,14 @@ bind = Control, Print, exec, akira-screenshot monitor
 # Emoji picker
 bind = $mainMod ALT, SPACE, exec, wofi-emoji
 
+# Example for notebook lid handling
+# Trigger when the switch is toggled.
+# bindl = , switch:[switch name], exec, swaylock
+# Trigger when the switch is turning on.
+# bindl = , switch:on:[switch name], exec, hyprctl keyword monitor "eDP-1, disable"
+# Trigger when the switch is turning off.
+# bindl = , switch:off:[switch name], exec, hyprctl keyword monitor "eDP-1, 2560x1600, 0x0, 1"
+
 # Windows and Workspaces
 # See https://wiki.hypr.land/Configuring/Window-Rules/ for more
 # See https://wiki.hypr.land/Configuring/Workspace-Rules/ for workspace rules
