--- a/configs/waybar/config
+++ b/configs/waybar/config
@@ -26,14 +26,8 @@
     "format": "{name}"
   },
   "clock": {
-    "format": "{:L%A %H:%M}",
-    "format-alt": "{:L%d %B %Y}",
-    "tooltip-format": "<tt><small>{calendar}</small></tt>",
-    "calendar": {
-      "mode": "year",
-      "mode-mon-col": 3,
-      "on-scroll": 1
-    }
+    "format": "{:L%A %d %B %H:%M}",
+    "on-click": "kitty --class=Calendar -e calcure"
   },
   "cpu": {
     "interval": 5,
