Hyprland: polkit agent

--- a/configs/hypr/hyprland.conf
+++ b/configs/hypr/hyprland.conf
@@ -9,6 +9,7 @@ $menu = wofi
 $lockscreen = hyprlock
 
 # Autostart
+exec-once = systemctl --user start hyprpolkitagent
 exec-once = hyprpaper
 exec-once = waybar
 exec-once = kanshi
