Hyprland: Input and monitors config

--- a/configs/hypr/hyprland.conf
+++ b/configs/hypr/hyprland.conf
@@ -17,7 +17,7 @@ exec-once = kanshi
 # Environment variables
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
-env = GTK_THEME,Tokyonight-Dark
+env = GTK_THEME,Adwaita-Dark
 
 # Theme
 general {
@@ -112,33 +112,31 @@ misc {
     disable_hyprland_logo = true # If true disables the random hyprland logo / anime girl background. :(
 }
 
-# https://wiki.hypr.land/Configuring/Variables/#input
-# Input
-input {
-    kb_layout = us
-    kb_variant =
-    kb_model =
-    kb_options =
-    kb_rules =
-
-    follow_mouse = 1
-
-    sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
-
-    touchpad {
-        natural_scroll = false
-    }
-}
-
-# See https://wiki.hypr.land/Configuring/Gestures
 gesture = 3, horizontal, workspace
 
-# Example per-device config
-# See https://wiki.hypr.land/Configuring/Keywords/#per-device-input-configs for more
-#device {
-#    name = epic-mouse-v1
-#    sensitivity = -0.5
-#}
+# Internal keyboard
+device {
+    name = at-translated-set-2-keyboard
+    kb_layout = br
+}
+
+# Internal touchpad
+device {
+    name = dell0c3e:00-27c6:0d43-touchpad
+    sensitivity = 0.3
+    natural_scroll = true
+}
+
+device {
+    name = logitech-g-pro--1
+    sensitivity = 0.0
+}
+
+device {
+    name = kingston-hyperx-alloy-fps-pro-mechanical-gaming-keyboard
+    kb_layout = us
+    kb_variant = intl
+}
 
 
 # Keybinds
