--- a/configs/hypr/hyprland.conf
+++ b/configs/hypr/hyprland.conf
@@ -17,7 +17,7 @@ exec-once = kanshi
 # Environment variables
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
-env = GTK_THEME,Adwaita-Dark
+#env = GTK_THEME,Adwaita-Dark
 
 # Theme
 general {
