Hyprland: splited config and general style config

--- a/configs/hypr/hyprlock.conf
+++ b/configs/hypr/hyprlock.conf
@@ -1,47 +1,49 @@
+source = ~/.config/hypr/variables.conf
+source = ~/.config/hypr/style.conf
+
 background {
-    path = /home/guilherme/Pictures/wallpapers/akira_wallpaper.jpg
-    blur_size = 8
-    blur_passes = 3
-    brightness = 0.8
+  path = $wallpaper
+  blur_size = 8
+  blur_passes = 3
+  brightness = 0.8
 }
 
 input-field {
-    size = 250, 60
-    position = 0, -200
-    outline_thickness = 1
-    rounding = 0
-    valign = center
-    halign = center
+  size = 300, 50
+  position = 0, -200
+  outline_thickness = 1
+  rounding = 0
+  valign = center
+  halign = center
 
-    dots_size = 0.2
-    dots_spacing = 0.35
+  dots_size = 0.2
+  dots_spacing = 0.35
 
-    font_family = JetBrainsMono Nerd Font Mono
-    inner_color = rgba(20, 20, 30, 0.6)
-    outer_color = rgba(255, 0, 80, 0.9)
-    capslock_color = rgba(255, 200, 0, 1)
-    font_color = rgba(200, 200, 200, 1)
+  font_family = $fontFamily
+  inner_color = $background
+  outer_color = $red
+  capslock_color = $yellow
+  font_color = $white
 }
 
 # Date
 label {
-    font_family = JetBrainsMono Nerd Font Mono
-    font_size = 28
-    color = rgba(200, 200, 200, 0.8)
-    position = 0, 100
-    text = cmd[update:1000] echo "$(date +"%A, %d %B %Y")"
-    valign = center
-    halign = center
+  font_size = 28
+  color = $white
+  position = 0, 100
+  text = cmd[update:1000] echo "$(date +"%A, %d %B %Y")"
+  valign = center
+  halign = center
 }
 
 # Clock
 label {
-    font_family = JetBrainsMono Nerd Font Mono
-    font_size = 60
-    color = rgba(255, 255, 255, 0.9)
-    position = 0, 0
-    text = cmd[update:1000] echo "$(date +"%-I:%M")"
-    valign = center
-    halign = center
+  font_family = $fontFamily
+  font_size = 60
+  color = $white
+  position = 0, 0
+  text = cmd[update:1000] echo "$(date +"%-I:%M")"
+  valign = center
+  halign = center
 }
 
