--- a/configs/hypr/hyprland.conf
+++ b/configs/hypr/hyprland.conf
@@ -1,242 +1,12 @@
 # Monitors (managed by kanshi)
 monitor=,preferred,auto,auto
 
-# Applications
-$terminal = kitty
-$fileManager = nautilus
-$browser = chromium
-$menu = wofi
-$lockscreen = hyprlock
-
-# Autostart
-exec-once = systemctl --user start hyprpolkitagent
-exec-once = hyprpaper
-exec-once = waybar
-exec-once = kanshi
-
-# Environment variables
-env = XCURSOR_SIZE,24
-env = HYPRCURSOR_SIZE,24
-#env = GTK_THEME,Adwaita-Dark
-
-# Theme
-general {
-    gaps_in = 5
-    gaps_out = 5
-
-    border_size = 1
-
-    col.active_border = rgb(F7768E)
-    col.inactive_border = rgb(C0CAF5)
-
-    resize_on_border = false
-
-    allow_tearing = false
-
-    layout = dwindle
-}
-
-# https://wiki.hypr.land/Configuring/Variables/#decoration
-decoration {
-    # Change transparency of focused and unfocused windows
-    active_opacity = 1.0
-    inactive_opacity = 1.0
-
-    shadow {
-        enabled = false
-    }
-
-    # https://wiki.hypr.land/Configuring/Variables/#blur
-    blur {
-        enabled = false
-    }
-}
-
-# https://wiki.hypr.land/Configuring/Variables/#animations
-animations {
-    enabled = yes
-
-    # Default curves, see https://wiki.hypr.land/Configuring/Animations/#curves
-    #        NAME,           X0,   Y0,   X1,   Y1
-    bezier = easeOutQuint,   0.23, 1,    0.32, 1
-    bezier = easeInOutCubic, 0.65, 0.05, 0.36, 1
-    bezier = linear,         0,    0,    1,    1
-    bezier = almostLinear,   0.5,  0.5,  0.75, 1
-    bezier = quick,          0.15, 0,    0.1,  1
-
-    # Default animations, see https://wiki.hypr.land/Configuring/Animations/
-    #           NAME,          ONOFF, SPEED, CURVE,        [STYLE]
-    animation = global,        1,     10,    default
-    animation = border,        1,     5.39,  easeOutQuint
-    animation = windows,       1,     4.79,  easeOutQuint
-    animation = windowsIn,     1,     4.1,   easeOutQuint, popin 87%
-    animation = windowsOut,    1,     1.49,  linear,       popin 87%
-    animation = fadeIn,        1,     1.73,  almostLinear
-    animation = fadeOut,       1,     1.46,  almostLinear
-    animation = fade,          1,     3.03,  quick
-    animation = layers,        1,     3.81,  easeOutQuint
-    animation = layersIn,      1,     4,     easeOutQuint, fade
-    animation = layersOut,     1,     1.5,   linear,       fade
-    animation = fadeLayersIn,  1,     1.79,  almostLinear
-    animation = fadeLayersOut, 1,     1.39,  almostLinear
-    animation = workspaces,    1,     1.94,  almostLinear, fade
-    animation = workspacesIn,  1,     1.21,  almostLinear, fade
-    animation = workspacesOut, 1,     1.94,  almostLinear, fade
-    animation = zoomFactor,    1,     7,     quick
-}
-
-# Ref https://wiki.hypr.land/Configuring/Workspace-Rules/
-# "Smart gaps" / "No gaps when only"
-# uncomment all if you wish to use that.
-# workspace = w[tv1], gapsout:0, gapsin:0
-# workspace = f[1], gapsout:0, gapsin:0
-# windowrule = bordersize 0, floating:0, onworkspace:w[tv1]
-# windowrule = rounding 0, floating:0, onworkspace:w[tv1]
-# windowrule = bordersize 0, floating:0, onworkspace:f[1]
-# windowrule = rounding 0, floating:0, onworkspace:f[1]
-
-# See https://wiki.hypr.land/Configuring/Dwindle-Layout/ for more
-dwindle {
-    pseudotile = true # Master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
-    preserve_split = true # You probably want this
-}
-
-# See https://wiki.hypr.land/Configuring/Master-Layout/ for more
-master {
-    new_status = master
-}
-
-# https://wiki.hypr.land/Configuring/Variables/#misc
-misc {
-    force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
-    disable_hyprland_logo = true # If true disables the random hyprland logo / anime girl background. :(
-}
-
-gesture = 3, horizontal, workspace
-
-# Internal keyboard
-device {
-    name = at-translated-set-2-keyboard
-    kb_layout = br
-}
-
-# Internal touchpad
-device {
-    name = dell0c3e:00-27c6:0d43-touchpad
-    sensitivity = 0.3
-    natural_scroll = true
-}
-
-device {
-    name = logitech-g-pro--1
-    sensitivity = 0.0
-}
-
-device {
-    name = kingston-hyperx-alloy-fps-pro-mechanical-gaming-keyboard
-    kb_layout = us
-    kb_variant = intl
-}
-
-
-# Keybinds
-$mainMod = SUPER
-
-bind = $mainMod, T, exec, $terminal
-bind = $mainMod, Q, killactive,
-bind = $mainMod SHIFT, P, exec, syspower
-bind = $mainMod, F, exec, $fileManager
-bind = $mainMod, B, exec, $browser
-bind = $mainMod, C, togglefloating,
-bind = $mainMod, SPACE, exec, $menu
-bind = $mainMod, ESCAPE, exec, $lockscreen
-bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, G, togglesplit, # dwindle
-
-# Move focus with mainMod + arrow keys
-bind = $mainMod, left, movefocus, l
-bind = $mainMod, right, movefocus, r
-bind = $mainMod, up, movefocus, u
-bind = $mainMod, down, movefocus, d
-
-# Switch workspaces with mainMod + [0-9]
-bind = $mainMod, 1, workspace, 1
-bind = $mainMod, 2, workspace, 2
-bind = $mainMod, 3, workspace, 3
-bind = $mainMod, 4, workspace, 4
-bind = $mainMod, 5, workspace, 5
-bind = $mainMod, 6, workspace, 6
-bind = $mainMod, 7, workspace, 7
-bind = $mainMod, 8, workspace, 8
-bind = $mainMod, 9, workspace, 9
-bind = $mainMod, 0, workspace, 10
-
-# Move active window to a workspace with mainMod + SHIFT + [0-9]
-bind = $mainMod SHIFT, 1, movetoworkspace, 1
-bind = $mainMod SHIFT, 2, movetoworkspace, 2
-bind = $mainMod SHIFT, 3, movetoworkspace, 3
-bind = $mainMod SHIFT, 4, movetoworkspace, 4
-bind = $mainMod SHIFT, 5, movetoworkspace, 5
-bind = $mainMod SHIFT, 6, movetoworkspace, 6
-bind = $mainMod SHIFT, 7, movetoworkspace, 7
-bind = $mainMod SHIFT, 8, movetoworkspace, 8
-bind = $mainMod SHIFT, 9, movetoworkspace, 9
-bind = $mainMod SHIFT, 0, movetoworkspace, 10
-
-# Example special workspace (scratchpad)
-bind = $mainMod, S, togglespecialworkspace, magic
-bind = $mainMod SHIFT, S, movetoworkspace, special:magic
-
-# Scroll through existing workspaces with mainMod + scroll
-bind = $mainMod, mouse_down, workspace, e+1
-bind = $mainMod, mouse_up, workspace, e-1
-
-# Move/resize windows with mainMod + LMB/RMB and dragging
-bindm = $mainMod, mouse:272, movewindow
-bindm = $mainMod, mouse:273, resizewindow
-
-# Audio
-bindel = ,XF86AudioRaiseVolume, exec, akira-audio volume-up
-bindel = ,XF86AudioLowerVolume, exec, akira-audio volume-down
-bindel = ,XF86AudioMute, exec, akira-audio volume-toggle
-bindel = ,XF86AudioMicMute, exec, akira-audio mic-toggle
-bindl = ,XF86AudioNext, exec, akira-audio play-next
-bindl = ,XF86AudioPrev, exec, akira-audio play-prev
-bindl = ,XF86AudioPause, exec, playerctl play-pause
-bindl = ,XF86AudioPlay, exec, playerctl play-pause
-# bindl = ,XF86AudioPause, exec, akira-audio play-pause
-# bindl = ,XF86AudioPlay, exec, akira-audio play-pause
-
-# Brightness
-bindel = ,XF86MonBrightnessUp, exec, akira-brightness up
-bindel = ,XF86MonBrightnessDown, exec, akira-brightness down
-
-# Screenshot
-bind = ,Print, exec, akira-screenshot area
-bind = SHIFT, Print, exec, akira-screenshot window
-bind = Control, Print, exec, akira-screenshot monitor
-
-# Emoji picker
-bind = $mainMod ALT, SPACE, exec, wofi-emoji
-
-# Example for notebook lid handling
-# Trigger when the switch is toggled.
-# bindl = , switch:[switch name], exec, swaylock
-# Trigger when the switch is turning on.
-# bindl = , switch:on:[switch name], exec, hyprctl keyword monitor "eDP-1, disable"
-# Trigger when the switch is turning off.
-# bindl = , switch:off:[switch name], exec, hyprctl keyword monitor "eDP-1, 2560x1600, 0x0, 1"
-
-# Windows and Workspaces
-# See https://wiki.hypr.land/Configuring/Window-Rules/ for more
-# See https://wiki.hypr.land/Configuring/Workspace-Rules/ for workspace rules
-
-# Example windowrule
-# windowrule = float,class:^(kitty)$,title:^(kitty)$
-
-# Ignore maximize requests from apps. You'll probably like this.
-windowrule = suppressevent maximize, class:.*
-
-# Fix some dragging issues with XWayland
-windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+source = ~/.config/hypr/variables.conf
+source = ~/.config/hypr/autostart.conf
+source = ~/.config/hypr/env.config
+source = ~/.config/hypr/layout.conf
+source = ~/.config/hypr/animations.conf
+source = ~/.config/hypr/devices.conf
+source = ~/.config/hypr/keybinds.conf
+source = ~/.config/hypr/windowrules.conf
 
