--- a/configs/hypr/hyprpaper.conf
+++ b/configs/hypr/hyprpaper.conf
@@ -1,4 +1,4 @@
-$wallpaper = $HOME/Pictures/wallpapers/akira_wallpaper.jpg
+source = ~/.config/hypr/variables.conf
 
 preload = $wallpaper
 wallpaper = , $wallpaper
