Hyprland: idle configuration

--- a/configs/hypr/autostart.conf
+++ b/configs/hypr/autostart.conf
@@ -1,5 +1,6 @@
 # Autostart
 exec-once = systemctl --user start hyprpolkitagent
+exec-once = hypridle
 exec-once = hyprpaper
 exec-once = waybar
 exec-once = kanshi
