--- a/configs/hypr/variables.conf
+++ b/configs/hypr/variables.conf
@@ -1,10 +1,9 @@
 $mainMod = SUPER
-$wallpaper = $HOME/Pictures/wallpapers/akira_wallpaper.jpg
+$wallpaper = ~/Pictures/wallpapers/akira_wallpaper.jpg
 
 # Applications
 $terminal = kitty
 $fileManager = nautilus
 $browser = chromium
 $menu = wofi
-$lockscreen = hyprlock
 
