--- a/configs/hypr/keybinds.conf
+++ b/configs/hypr/keybinds.conf
@@ -6,7 +6,7 @@ bind = $mainMod, F, exec, $fileManager
 bind = $mainMod, B, exec, $browser
 bind = $mainMod, C, togglefloating,
 bind = $mainMod, SPACE, exec, $menu
-bind = $mainMod, ESCAPE, exec, $lockscreen
+bind = $mainMod, ESCAPE, exec, hyprlock
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, G, togglesplit, # dwindle
 
