Hyprland: wallpaper changed

--- a/configs/hypr/hyprpaper.conf
+++ b/configs/hypr/hyprpaper.conf
@@ -1,5 +1,6 @@
-source = ~/.config/hypr/variables.conf
+#source = ~/.config/hypr/variables.conf
+$wallpaper = ~/Pictures/wallpapers/wp6153215-lord-of-the-rings-minimalist-wallpapers.png
 
 preload = $wallpaper
-wallpaper = , $wallpaper
+wallpaper = ,$wallpaper
 
