--- a/configs/hypr/variables.conf
+++ b/configs/hypr/variables.conf
@@ -1,5 +1,5 @@
 $mainMod = SUPER
-$wallpaper = ~/Pictures/wallpapers/akira_wallpaper.jpg
+$wallpaper = ~/Pictures/wallpapers/wp6153215-lord-of-the-rings-minimalist-wallpapers.png
 
 # Applications
 $terminal = kitty
