--- a/configs/hypr/hyprlock.conf
+++ b/configs/hypr/hyprlock.conf
@@ -42,7 +42,7 @@ label {
   font_size = 60
   color = $white
   position = 0, 0
-  text = cmd[update:1000] echo "$(date +"%-I:%M")"
+  text = cmd[update:1000] echo "$(date +"%-H:%M")"
   valign = center
   halign = center
 }
