--- a/configs/waybar/config
+++ b/configs/waybar/config
@@ -18,6 +18,7 @@
     "temperature",
     "bluetooth",
     "network",
+    "custom/notifications",
     "pulseaudio",
     "battery"
   ],
@@ -132,5 +133,11 @@
   },
   "gamemode": {
     "format": "{glyph} {count}"
+  },
+  "custom/notifications": {
+    "exec": "akira-notifications get-icon",
+    "on-click": "akira-notifications pause-toggle",
+    "restart-interval": 1,
+    "tooltip": false
   }
 }
